# VeritasSync

./: .clang-format  .editorconfig  .gitignore  AI_IGNORE_RULES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md  README_EN.md  build_check.bat  log.txt  rebuild.bat  test.txt  vcpkg.json
.claude/: settings.local.json
.github/workflows/: cmake.yml
docs/: architecture.md  kcp_guide.md  libjuice_guide.md  project_analysis.md
include/VeritasSync/: Config.h  Crypto.h  CryptoLayer.h  Database.h  EncodingUtils.h  FileFilter.h  Hashing.h  Logger.h  P2PManager.h  Protocol.h  StateManager.h  SyncManager.h  SyncNode.h  TrackerClient.h  TransferManager.h  TrayIcon.h  WebUI.h
include/VeritasSync/common/: Config.h  CryptoLayer.h  EncodingUtils.h  Hashing.h  Logger.h  ModernUtils.h  PathUtils.h  SignalProto.h  TrayIcon.h
include/VeritasSync/net/: BinaryFrame.h  IceTransport.h  KcpProto.h  KcpSession.h  LanDiscovery.h  StunProber.h  UpnpManager.h
include/VeritasSync/p2p/: BroadcastManager.h  HeartbeatService.h  KcpScheduler.h  MessageRouter.h  P2PManager.h  PeerController.h  PeerRegistry.h  ReconnectPolicy.h  TrackerClient.h  WebUI.h
include/VeritasSync/storage/: CachedFileStore.h  Database.h  FileFilter.h  NLFilterGenerator.h  StateManager.h
include/VeritasSync/sync/: Protocol.h  SyncHandler.h  SyncManager.h  SyncNode.h  SyncSession.h  TransferManager.h
include/VeritasSync/tracker/: Session.h  TrackerServer.h
src/: efsw_test.cpp  main.cpp  nat_demo.cpp
src/common/: Config.cpp  CryptoLayer.cpp  Hashing.cpp  Logger.cpp  TrayIcon.cpp
src/net/: IceTransport.cpp  KcpSession.cpp  LanDiscovery.cpp  StunProber.cpp  UpnpManager.cpp
src/p2p/: BroadcastManager.cpp  HeartbeatService.cpp  KcpScheduler.cpp  MessageRouter.cpp  P2PManager.cpp  PeerController.cpp  PeerRegistry.cpp  ReconnectPolicy.cpp  TrackerClient.cpp  WebUI.cpp
src/peer/: Crypto.cpp  CryptoLayer.cpp  Database.cpp  FileFilter.cpp  Hashing.cpp  Logger.cpp  P2PManager.cpp  StateManager.cpp  SyncManager.cpp  SyncNode.cpp  TrackerClient.cpp  TransferManager.cpp
src/platform/: TrayIcon.cpp
src/storage/: CachedFileStore.cpp  Database.cpp  FileFilter.cpp  NLFilterGenerator.cpp  StateManager.cpp
src/sync/: SyncHandler.cpp  SyncManager.cpp  SyncNode.cpp  SyncSession.cpp  TransferManager.cpp
src/tracker/: Session.cpp  TrackerServer.cpp  main.cpp
src/web/: index.html
tests/: main.cpp  test_binary_frame.cpp  test_binary_frame_coverage.cpp  test_common_utils_robustness.cpp  test_config.cpp  test_crypto_layer.cpp  test_database.cpp  test_database_advanced.cpp  test_database_coverage.cpp  test_encoding_utils.cpp  test_file_filter.cpp  test_hashing.cpp  test_helpers.h  test_kcp_session.cpp  test_logger_coverage.cpp  test_modern_utils.cpp  test_nl_filter.cpp  test_p2p_manager.cpp  test_parallel_scan.cpp  test_peer_controller.cpp  test_protocol.cpp  test_protocol_coverage.cpp  test_reconnect_heartbeat.cpp  test_state_manager_coverage.cpp  test_state_manager_enhanced.cpp  test_stun_prober.cpp  test_sync_handler.cpp  test_sync_logic.cpp  test_sync_manager.cpp  test_sync_manager_enhanced.cpp  test_sync_node.cpp  test_sync_session.cpp  test_tracker_client.cpp  test_transfer_manager.cpp  test_transfer_manager_async.cpp  test_transfer_manager_coverage.cpp
